package kallas.zubrzycki;

public enum EPointColor {
    WHITE, BLACK, NONE, BORDER;
}
