package kallas.zubrzycki;

public abstract class IGameManagerObserver {
    protected GameManager gameManager;
    public abstract void update();
}
